Support arranging commands into sub-menus
Closes #1705