@@ -11,16 +11,16 @@ import org.workcraft.tasks.TaskManager;
 import org.workcraft.utils.WorkspaceUtils;
 import org.workcraft.workspace.WorkspaceEntry;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class CscConflictResolutionCommand implements ScriptableCommand<WorkspaceEntry> {
 
     private static final String TITLE = "Resolution of CSC conflicts";
 
     @Override
-    public String getSection() {
-        return "Encoding conflicts";
+    public Section getSection() {
+        return new Section("Encoding conflicts");
     }
 
     @Override
@@ -48,7 +48,7 @@ public class CscConflictResolutionCommand implements ScriptableCommand<Workspace
         Collection<Mutex> mutexes = MutexUtils.getMutexes(stg);
         MutexUtils.logInfoPossiblyImplementableMutex(mutexes);
         TaskManager taskManager = Framework.getInstance().getTaskManager();
-        TransformationTask task = new TransformationTask(we, Arrays.asList("-csc"), mutexes);
+        TransformationTask task = new TransformationTask(we, List.of("-csc"), mutexes);
         TransformationResultHandlingMonitor monitor = new TransformationResultHandlingMonitor(we, false, mutexes);
         taskManager.queue(task, TITLE, monitor);
         return monitor;
